WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194913
[MSVC] Fix compilation errors with lambdas in ResourceLoadStatistics
https://bugs.webkit.org/show_bug.cgi?id=194913
Summary
[MSVC] Fix compilation errors with lambdas in ResourceLoadStatistics
Don Olmstead
Reported
2019-02-21 12:32:39 PST
There are issues compiling ResourceLoadStatisticsMemoryStore in MSVC around nested lambdas. This is true even in MSVS 2019 Preview 3
Attachments
Patch
(3.82 KB, patch)
2019-02-21 12:40 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2019-02-21 12:40:38 PST
Created
attachment 362628
[details]
Patch
Brent Fulgham
Comment 2
2019-02-21 16:23:10 PST
Comment on
attachment 362628
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362628&action=review
EWS seems happy, so this change looks good.
> Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:369 > + RunLoop::main().dispatch([this, weakThis = WTFMove(weakThis)]() {
Interesting that MSVC doesn't like this. This actually seems like better code anyway.
> Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:33 > +#include "NetworkProcess.h"
I wonder if this was missing because of the vagaries of our Unified Sources behavior.
Don Olmstead
Comment 3
2019-02-21 16:41:43 PST
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 362628
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=362628&action=review
> > EWS seems happy, so this change looks good. > > > Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:369 > > + RunLoop::main().dispatch([this, weakThis = WTFMove(weakThis)]() { > > Interesting that MSVC doesn't like this. This actually seems like better > code anyway.
There are a bunch of bugs around lambdas in MSVC. Supposedly they were fixed but this was built with latest preview release of 2019 so 🤷
> > Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:33 > > +#include "NetworkProcess.h" > > I wonder if this was missing because of the vagaries of our Unified Sources > behavior.
Most likely. I really hate Unified Sources. This
https://bugs.webkit.org/show_bug.cgi?id=193073
needs to get fixed first.
WebKit Commit Bot
Comment 4
2019-02-21 17:05:13 PST
Comment on
attachment 362628
[details]
Patch Clearing flags on attachment: 362628 Committed
r241924
: <
https://trac.webkit.org/changeset/241924
>
WebKit Commit Bot
Comment 5
2019-02-21 17:05:14 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-21 17:36:45 PST
<
rdar://problem/48297768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug