[MSVC] Fix compilation errors with lambdas in ResourceLoadStatistics https://bugs.webkit.org/show_bug.cgi?id=194913

Reviewed by Brent Fulgham.

MSVC has problems with the scoping of `this` within a nested lambda. To work around the
behavior the enclosing lambda's wrapping of `this` is used within the nested lambda.

* NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
(WebKit::ResourceLoadStatisticsMemoryStore::processStatisticsAndDataRecords):
* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::requestStorageAccessGranted):


Canonical link: https://commits.webkit.org/209289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241924 268f45cc-cd09-0410-ab3c-d52691b4dbfc